<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:id="@+id/main">

    <EditText
        android:id="@+id/etWeightBmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_weight_kg"
        android:inputType="numberDecimal"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etHeightBmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_height_cm"
        android:inputType="numberDecimal"
        android:importantForAutofill="no"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnCalculateBmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_calculate"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/tvResultBmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        android:textColor="#000000" />
</LinearLayout>
